--- a/vol1.html
+++ b/vol1.html
@@ -13,7 +13,9 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", Roboto, "Helvetica Neue", sans-serif;
     color: #fff;
     min-height: 100vh;
-    display: flex; flex-direction: column; align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   header {
     position: sticky; top: 0; z-index: 5;
@@ -22,29 +24,53 @@
     backdrop-filter: blur(6px);
     border-bottom: 1px solid rgba(255,255,255,0.06);
     padding: .75rem 1rem;
-    display: flex; gap: .75rem; align-items: center; justify-content: center; flex-wrap: wrap;
+    display: flex;
+    gap: .75rem;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
   }
   .title { font-weight: 600; }
   .btn {
-    appearance: none; border: 1px solid rgba(255,255,255,0.15);
-    background: rgba(255,255,255,0.06); color: #e9f3ff;
-    padding: .45rem .7rem; border-radius: 8px; font-size: .85rem; cursor: pointer;
+    appearance: none;
+    border: 1px solid rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.06);
+    color: #e9f3ff;
+    padding: .45rem .7rem;
+    border-radius: 8px;
+    font-size: .85rem;
+    cursor: pointer;
     text-decoration: none;
   }
   .btn:hover { background: rgba(255,255,255,0.1); }
   .btn.secondary { background: transparent; }
 
-  .wrap { width: 100%; max-width: 900px; padding: 1rem; display: flex; justify-content: center; }
+  .wrap {
+    width: 100%;
+    max-width: 900px;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+  }
 
   /* Flipbook container */
   #flipbook {
-    width: 900px; height: 600px; background: #1a1a1a; border-radius: 12px;
+    width: 900px;
+    height: 600px;
+    background: #1a1a1a;
+    border-radius: 12px;
     box-shadow: 0 40px 120px rgba(0,0,0,0.9), 0 2px 4px rgba(255,255,255,0.05) inset;
-    overflow: hidden; display: none;
+    overflow: hidden;
+    display: none;
   }
-  #flipbook .page { width: 450px; height: 600px; background-size: cover; background-position: center; }
+  #flipbook .page {
+    width: 450px;
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+  }
 
-  /* PDF reader */
+  /* PDF reader: clean, no grey box */
   #pdfReader {
     width: 100%;
     max-width: 900px;
@@ -52,18 +78,34 @@
   }
   #pdfReader iframe {
     width: 100%;
-    height: 85vh;
+    height: 100vh;        /* fills the screen height */
     border: none;
-    border-radius: 12px;
-    box-shadow: 0 20px 60px rgba(0,0,0,0.7);
-    background: #111;
+    border-radius: 0;     /* no rounded frame */
+    box-shadow: none;     /* no shadow box */
+    background: transparent;
   }
 
-  footer { color: #aaa; font-size: .8rem; padding: 1rem; text-align: center; opacity: .8; max-width: 900px; }
+  footer {
+    color: #aaa;
+    font-size: .8rem;
+    padding: 1rem;
+    text-align: center;
+    opacity: .8;
+    max-width: 900px;
+  }
 
   @media (max-width: 950px) {
-    #flipbook { width: 100%; height: calc(100vw * (600/900)); }
-    #flipbook .page { width: 50%; height: 100%; }
+    #flipbook {
+      width: 100%;
+      height: calc(100vw * (600/900));
+    }
+    #flipbook .page {
+      width: 50%;
+      height: 100%;
+    }
+    #pdfReader iframe {
+      height: 100vh;
+    }
   }
 </style>
 
@@ -86,12 +128,14 @@
 
 <footer>
   If all is black wait for loading 😉...<br><br>
-  Tip: On mobile, PDF scroll mode is easiest ^^ . Switch to flip mode anytime.
+  Use scroll, touch, or arrow keys to move through the pages.<br>
+  Tip: PDF scroll mode is easiest ^^ . Switch to flip mode anytime.
 </footer>
 
 <script>
   const PDF_SRC = "booklet.pdf";
 
+  // Flip mode images
   const FOLDER = "pages/";
   const PREFIX = "booklet-page-";
   const PAD = 3;
@@ -132,7 +176,8 @@
 
     pdfDiv.innerHTML = "";
     const iframe = document.createElement('iframe');
-    iframe.src = PDF_SRC + "#view=FitH&scrollbar=1&toolbar=1";
+    // Hide PDF toolbar & side panels so it looks clean
+    iframe.src = PDF_SRC + "#toolbar=0&navpanes=0&scrollbar=1&view=FitH";
     iframe.loading = "lazy";
     pdfDiv.appendChild(iframe);
 
@@ -201,10 +246,10 @@
   }
 
   (async function init(){
-    // Preload page images for flip mode (optional but nice)
+    // Preload page images for flip mode (optional)
     pageURLs = await discoverPages();
 
-    // Default view: PDF scroll
+    // Default view: clean PDF scroll
     mountPDFReader();
 
     document.getElementById('toggleMode').addEventListener('click', toggleMode);
@@ -213,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
