--- a/vol2.html
+++ b/vol2.html
@@ -187,6 +187,163 @@ loadPDF();
 
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>PaleZine – Volume 2</title>
+
+<style>
+  body {
+    margin: 0;
+    background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
+    font-family: system-ui, -apple-system, "Inter", sans-serif;
+    color: #fff;
+    min-height: 100vh;
+    display: flex; flex-direction: column; align-items: center;
+  }
+
+  header {
+    position: sticky; top: 0; z-index: 5;
+    width: 100%;
+    background: rgba(0,0,0,0.6);
+    backdrop-filter: blur(6px);
+    border-bottom: 1px solid rgba(255,255,255,0.06);
+    padding: .75rem 1rem;
+    display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap;
+  }
+
+  .btn {
+    border: 1px solid rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.06);
+    color: #e9f3ff;
+    padding: .45rem .7rem; border-radius: 8px;
+    font-size: .85rem; cursor: pointer; text-decoration: none;
+  }
+
+  .wrap { width: 100%; max-width: 900px; padding: 1rem; }
+
+  #scrollReader img {
+    width: 100%; margin-bottom: 1rem;
+    border-radius: 10px;
+    background: #111;
+    box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+  }
+
+  #flipbook { display:none; }
+
+  footer {
+    text-align: center;
+    color: #ccc;
+    padding: 2rem 1rem;
+  }
+</style>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/blasten/turn.js/turn.min.js"></script>
+</head>
+
+<body>
+
+<header>
+  <span class="title">PaleZine — Volume 2</span>
+  <button id="toggleMode" class="btn">Switch to Flip</button>
+  <a href="booklet2.pdf" class="btn" download>Download PDF</a>
+  <a href="index.html" class="btn">Back</a>
+</header>
+
+<div class="wrap">
+  <div id="scrollReader"></div>
+  <div id="flipbook"></div>
+</div>
+
+<footer>
+  If all is black, wait for loading 😉<br>
+  Tip: scroll mode is easiest on mobile.
+</footer>
+
+<script>
+const FOLDER = "pages2/";
+const PREFIX = "booklet2-";
+const SUFFIX = "-1.jpg";
+
+let pageURLs = [];
+let mode = "scroll";
+
+async function discoverPages() {
+  const urls = [];
+  for (let i = 1; i < 200; i++) {
+    const url = `${FOLDER}${PREFIX}${i}${SUFFIX}`;
+    try {
+      const res = await fetch(url);
+      if (!res.ok) break;
+      urls.push(url);
+    } catch { break; }
+  }
+  return urls;
+}
+
+function mountScroll() {
+  const s = document.getElementById("scrollReader");
+  const f = document.getElementById("flipbook");
+
+  f.style.display = "none";
+  s.style.display = "block";
+  s.innerHTML = "";
+
+  pageURLs.forEach(src => {
+    const img = document.createElement("img");
+    img.src = src;
+    s.appendChild(img);
+  });
+
+  mode = "scroll";
+  document.getElementById("toggleMode").textContent = "Switch to Flip";
+}
+
+function mountFlip() {
+  const s = document.getElementById("scrollReader");
+  const f = document.getElementById("flipbook");
+
+  s.style.display = "none";
+  f.style.display = "block";
+
+  f.innerHTML = "";
+  pageURLs.forEach(src => {
+    const div = document.createElement("div");
+    div.style.width = "450px";
+    div.style.height = "600px";
+    div.style.backgroundImage = `url('${src}')`;
+    div.style.backgroundSize = "cover";
+    f.appendChild(div);
+  });
+
+  $("#flipbook").turn({
+    width: 900,
+    height: 600,
+    autoCenter: true,
+    display: "double",
+  });
+
+  mode = "flip";
+  document.getElementById("toggleMode").textContent = "Switch to Scroll";
+}
+
+document.getElementById("toggleMode").addEventListener("click", () => {
+  if (mode === "scroll") mountFlip();
+  else mountScroll();
+});
+
+(async function init() {
+  pageURLs = await discoverPages();
+  mountScroll(); // default
+})();
+</script>
+
+</body>
+</html>
+
 
 
 
